test/static/bad/hidden-left-recursion-two.mly
%token A B C
%start<unit> a

%%

a:
  A* b C {}

b:
  B C
| A? a   {}
