test/static/bad/hidden-left-recursion-two.exp
File "hidden-left-recursion-two.mly", line 11, characters 2-6:
Error: the grammar exhibits hidden left recursion: in the production
b -> option(A) a,
the nonterminal symbol option(A) is nullable,
and the remainder of the right-hand side expands to a sentential form
that begins with the nonterminal symbol b.
This implies that the grammar is not LR(k) for any k.
